--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 <html>
 <body>
-  <h1>Averge Reported Happyness</h1>
+  <h1>Average Reported Happiness</h1>
   <div class="Map"> </div>
 </body>
 </html>
