--- a/index.html
+++ b/index.html
@@ -41,12 +41,15 @@
 <body>
   <h1>Average Reported Happiness</h1>
   <div class="Map"> </div>
+  <div class="Cluster"> </div>
 </body>
 </html>
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="js/cluster.js"></script>
 <script>
+cluster()
 
 var width = 960,
     height = 600,
@@ -83,7 +86,6 @@ var pennisTip = d3.select("body")
         		.attr("class", "tooltip")
         		.style("opacity", 0);
 
-
 svgHappyness.append("rect")
     .attr("class", "background")
     .attr("width", width)
@@ -98,6 +100,7 @@ d3.queue()
     .defer(d3.json, "http://enjalot.github.io/wwsd/data/world/world-110m.geojson")
     .defer(d3.csv, "data/2016_data.csv", function(d) { happyness.set(d.Country_code, d.Happiness_score)})
     .await(ready);
+
 
 function ready(error, world) {
     if (error) throw error;
@@ -204,5 +207,6 @@ function makeLables(){
       .select(".domain")
       .remove();
 }
+
 
 </script>
