--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </html>
 <script src="//d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-<script src="http://d3js.org/topojson.v1.min.js"></script>
+<script src="https://d3js.org/topojson.v1.min.js"></script>
 <script src="js/cluster.js"></script>
 <script src="js/cloropleth.js"></script>
 <script>
