sliders are better looking, updating year works for the entire page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 	<!-- year slider -->
 	<div id="selector_div">	
-		<input type="range" min="2008" max="2016" value="2016" step="1" class="slider" id="myRange">
+		<input type="range" min="2008" max="2016" value="2016" step="1" class="slider" id="year_range" onchange="update_page(this.value)">
 	</div>
 
 	<br>
@@ -34,19 +34,23 @@
 	<!-- cluster map -->
 	<div class="Cluster">
 	
-		<!-- happiness slider -->
-		<section class="range-slider">
-			<span class="rangeValues"></span>
-			<input value="5" min="0" max="15" step="0.5" type="range">
-			<input value="10" min="0" max="15" step="0.5" type="range">
-		</section>
+		<div id="sidebar">
+			<!-- happiness slider -->
+			<section class="range-slider">
+				<span class="rangeValues"></span>
+				<input value="0" min="0" max="10" step="0.25" type="range">
+				<input value="10" min="0" max="10" step="0.25" type="range">
+			</section>
+			<p class = "sidebar_p"> happiness </p>
 
-		<!-- gdp slider -->
-		<section class="range-slider">
-			<span class="rangeValues"></span>
-			<input value="5" min="0" max="15" step="0.5" type="range">
-			<input value="10" min="0" max="15" step="0.5" type="range">
-		</section>
+			<!-- gdp slider -->
+			<section class="range-slider">
+				<span class="rangeValues"></span>
+				<input value="5" min="0" max="15" step="0.5" type="range">
+				<input value="10" min="0" max="15" step="0.5" type="range">
+			</section>
+			<p class = "sidebar_p"> gdp </p>
+		</div>
 
 
 	</div>
@@ -54,9 +58,15 @@
 <script>
 
 	//first page load
-	let defaultYear = "2016";
-	selector(defaultYear);
+	var defaultYear = selector();
 	cloropleth(defaultYear);
 	cluster(defaultYear);
+
+	function update_page(year){
+		year = selector();
+		cloropleth(year);
+		cluster(year);
+
+	}
 </script>
 </html>
