slider bars r ugly

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 			<!-- happiness slider -->
 			<section class="range-slider">
 				<span class="rangeValues"></span>
-				<input value="0" min="0" max="10" step="0.25" type="range">
-				<input value="10" min="0" max="10" step="0.25" type="range">
+				<input class="slider" value="0" min="0" max="10" step="0.25" type="range">
+				<input class="slider" value="10" min="0" max="10" step="0.25" type="range">
 			</section>
 			<p class = "sidebar_p"> happiness </p>
 
 			<!-- gdp slider -->
 			<section class="range-slider">
 				<span class="rangeValues"></span>
-				<input value="5" min="0" max="15" step="0.5" type="range">
-				<input value="10" min="0" max="15" step="0.5" type="range">
+				<input class="slider" value="5" min="0" max="15" step="0.5" type="range">
+				<input class="slider" value="10" min="0" max="15" step="0.5" type="range">
 			</section>
 			<p class = "sidebar_p"> gdp </p>
 		</div>
