--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 			<section class="range-slider">
 				<span class="rangeValues"></span>
 				<input class="slider" id="happiness1" value="0" min="0" max="10" step="0.25" type="range" onchange="filter('happiness',this.value)">
-				<input class="slider" id="happiness2" value="10" min="0" max="10" step="0.25" type="range" onchange="filter('happiness',this.value)">
+				<input class="slider" id="happiness2" value="6" min="0" max="10" step="0.25" type="range" onchange="filter('happiness',this.value)">
 			</section>
 			<p class = "sidebar_p"> happiness </p>
 
@@ -77,13 +77,25 @@
 			var one = document.getElementById(ids[i]+"1").value;
 			var two = document.getElementById(ids[i]+"2").value;
 
+			console.log(one);
+			console.log(two);
+
 			// figure out which oen is larger
-			if (one<two){
+			if (one*1.0 < two*1.0){
+				console.log("one < two");
 				filters[ids[i]] = {"smaller":one, "larger":two};
+				console.log(filters.happiness.smaller);
+				console.log(filters.happiness.larger);
 			} else if(one === two){
+				console.log("one === two");
 				filters[ids[i]] = {"smaller":one, "larger":one};
+				console.log(filters.happiness.smaller);
+				console.log(filters.happiness.larger);
 			} else {
+				console.log("else...");
 				filters[ids[i]] = {"smaller":two, "larger":one};
+				console.log(filters.happiness.smaller);
+				console.log(filters.happiness.larger);
 			}
 		}
 		return filters;
@@ -97,7 +109,7 @@
 	}
 
 	function filter(id, value) {
-		cluster(year, "");
+		cluster(year, get_filters());
 	}
 </script>
 </html>
