--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
 
 </head>
 
-<body>
-	<h1>Average Reported Happiness</h1>
+<body >
+	<h1>Visualizing Happiness Around The World</h1>
 
 	<!-- year slider -->
-	<div id="selector_div">
+	<div align="center">
+	<div id="selector_div" align="center">
 		<p>Selected Year: <span id="sliderVal"></span></p>
 		<input type="range" min="2008" max="2016" value="2016" step="1" class="slider" id="year_range" onchange="update_page(this.value)">
 	</div>
+</div>
 
 	<br>
 
 	<!-- happiness map -->
-	<div class="Map"> </div>
+	<div class="Map" align="center"> </div>
 
 	<!-- cluster map -->
 	<div class="Cluster">
@@ -56,23 +58,23 @@
 	</div>
 
 	<div class="bar_holder">
-		<div class="happyness_bar"> </div>
-		<div class="population_bar"> </div>
-		<div class="gdp_bar"> </div>
-		<div class="inflation_bar"> </div>
-		<div class="unemployment_bar"> </div>
-		<div class="alcohol_bar"> </div>
+		<div class="happyness_bar" align="center"> </div>
+		<div class="population_bar" align="center"> </div>
+		<div class="gdp_bar" align="center"> </div>
+		<div class="inflation_bar" align="center"> </div>
+		<div class="unemployment_bar" align="center"> </div>
+		<div class="alcohol_bar" align="center"> </div>
 	</div>
 
 </body>
 <script>
-var slider = document.getElementById("year_range");
-var output = document.getElementById("sliderVal");
-output.innerHTML = slider.value;
+	var slider = document.getElementById("year_range");
+	var output = document.getElementById("sliderVal");
+	output.innerHTML = slider.value;
 
-slider.oninput = function() {
-  output.innerHTML = this.value;
-}
+	slider.oninput = function() {
+  	output.innerHTML = this.value;
+	}
 </script>
 <script>
 	var year = selector();
