--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<div class="Map" align="center"> </div>
 
 	<!-- cluster map -->
-	<div class="Cluster">
+	<div class="Cluster" align="center">
 
 		<div id="sidebar">
 			<!-- happiness slider -->
