--- a/index.html
+++ b/index.html
@@ -53,6 +53,38 @@
 				<input class="slider" id="gdp2" value="16" min="7" max="16" step="1" type="range" onchange="filter()">
 			</section>
 			<p class = "sidebar_p"> gdp </p>
+
+			<!-- population slider 300000-2000000 -->
+			<section class="range-slider">
+				<span id="population0"></span>
+				<input class="slider" id="population1" value="7" min="7" max="16" step="1" type="range" onchange="filter()">
+				<input class="slider" id="population2" value="16" min="7" max="16" step="1" type="range" onchange="filter()">
+			</section>
+			<p class = "sidebar_p"> population </p>
+
+			<!-- inflation slider 50-20,000,000,000,000 -->
+			<section class="range-slider">
+				<span id="inflation0"></span>
+				<input class="slider" id="inflation1" value="7" min="7" max="16" step="1" type="range" onchange="filter()">
+				<input class="slider" id="inflation2" value="16" min="7" max="16" step="1" type="range" onchange="filter()">
+			</section>
+			<p class = "sidebar_p"> inflation </p>
+
+			<!-- unemployement slider 0-40 -->
+			<section class="range-slider">
+				<span id="unemployment0"></span>
+				<input class="slider" id="unemployment1" value="0" min="0" max="40" step="1" type="range" onchange="filter()">
+				<input class="slider" id="unemployment2" value="40" min="0" max="40" step="1" type="range" onchange="filter()">
+			</section>
+			<p class = "sidebar_p"> unemployment </p>
+
+			<!-- alcohol slider 0-35 -->
+			<section class="range-slider">
+				<span id="alcohol0"></span>
+				<input class="slider" id="alcohol1" value="0" min="0" max="35" step="1" type="range" onchange="filter()">
+				<input class="slider" id="alcohol2" value="35" min="0" max="35" step="1" type="range" onchange="filter()">
+			</section>
+			<p class = "sidebar_p"> alcohol </p>
 		</div>
 		<svg id="clusterSVG"></svg>
 
