--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 	<script src="https://d3js.org/topojson.v1.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-
+	<title>CS 4802 | BioVis Final</title>
 	<script src="js/cluster.js"></script>
 	<script src="js/cloropleth.js"></script>
 	<script src="js/selector.js"></script>
