--- a/index.html
+++ b/index.html
@@ -92,12 +92,14 @@
 		<div class="unemployment_bar" align="center"> </div>
 		<div class="alcohol_bar" align="center"> </div>
 	</div>
+	<br>
 	<div align="center">
 		This project was created to determine what factors make people happy. Using a dataset where people ranked their own happiness and we decided we wanted to try to correlate that data to other factors, like the regions GPD, unemployment rate, alcohol consumption, etc, and try to determine what factors are most impactful on how someone ranks their own happiness. Using our visualization we present this information in a interactive, visually appealing, and informative manner for you to explore the connections between our variables. <br>
-
-We found that there were many correlations between these datasets including happiness being inversely related to unemployment rates.  We tried to allow users to make their own conclusions by allowing interactions with all of the datasets. <br>
-To find more on how we completed this project visit:
-https://github.com/sjcomeau43543/DataVisFinal/ProcessBook.pdf
+		<br>
+		We found that there were many correlations between these datasets including happiness being inversely related to unemployment rates.  We tried to allow users to make their own conclusions by allowing interactions with all of the datasets. <br>
+		<br>
+		To find more on how we completed this project
+		<a href="https://github.com/sjcomeau43543/DataVisFinal/ProcessBook.pdf"> Click Here</a>
 	</div>
 
 </body>
