added instructions for intended use

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
 	<div class="Cluster" align="center">
 
 		<span>
-			<p>the color of the ciricles corresponds to the happiness from the previous chart</p>
+			<p><b>The color of the ciricles corresponds to the happiness from the previous chart</b></p>
 			<p><b>hover</b> over a circle to view the country name and exact reported happyness value</p>
-			<p><b>Adjust</b> the siders to filter the cluster</p>
+			<p><b>Adjust</b> the siders to filter the cluster and find correlations</p>
 		<div id="sidebar">
 			<!-- happiness slider -->
 			<section class="range-slider">
@@ -92,7 +92,9 @@
 		</span>
 	</div>
 
-	<div class="bar_holder">
+	<div class="bar_holder" align = "center">
+		<p><b>The bars are sorted in assending order</b></p>
+		<p><b>hover</b> over a bar to view the country name and exact reported value of each field to learn more about each country</p>
 		<div class="happyness_bar" align="center"> </div>
 		<div class="population_bar" align="center"> </div>
 		<div class="gdp_bar" align="center"> </div>
